 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

Tencent changes:

0.9.0-1-tencent
  Flink-1.9: use schema visitor for paruqet reader and writer [jimmyjchen]
  Spark3: Support Update, Delete and Merge Into command for spark SQL [jimmyjchen]
  Check if there is at least 1 pending data file in close() of IcebergCommitter, to avoid commit with nothing [seanxiangli]
  Add Flink Orc writer and reader [simonssu]
  Add more parameter validation and log key parameters to task manager's log [seanxiangli]
  Add Flink table source [jimmyjchen]
  Update tencent-release.sh to remove versions.lock when packaging source code [seanxiangli]
  Unset `fs.hdfs.impl` to fix HDFS loading issue [jimmyjchen]
  Improve Flink Iceberg sink parameters [seanxiangli]
  Update deploy-tencent.gradle to fix publishing issue on bundled-guava, flink-1.9-runtime and spark-runtime [seanxiangli]
  Add bundled-guava to tencent release script [seanxiangli]
  Add metrics to IcebergCommitter - addendum - package flink-metrics-dropwizard [seanxiangli]
  Add metrics to IcebergCommitter [simonssu]
  Add flink-1.9, flink-1.9-runtime and spark2, spark3, spark3-runtime to tencent release script [seanxiangli]
  Adapt Flink table sink and sink factory [seanxiangli]
  Add ProcessingTimeCallback to handle data sink in non-checkpoint mode [simonssu]
  Use Flink Row instead of Iceberg Record as sink input [seanxiangli]

0.8.0-1-tencent
  Update release process to include flink, flink-runtime and change list [seanxiangli]
  Flink Iceberg sink (based on open source PR #856) [seanxiangli]
  [ISSUE-79] Support time type in GenericAvroReader and Writer. Back-port #1015 from open source [seanxiangli]
  Fix staging location issue  [Junjie Chen]